--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Carousel Template · Bootstrap v5.0</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     
 
     <!-- Bootstrap core CSS -->
